crates/flowlog-build/tests/errors/parser/attribute_unknown_type.dl
.decl R(x: NoSuchType)
R(1).
